# dtcc-carto

./: .gitignore  AGENTS.md  deploy.mv
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py  settings.py
backend/app/services/: geospatial.py  osm.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
frontend/src/api/: select.ts
frontend/src/components/map/: MapView.tsx
frontend/src/config/: basemaps.ts
frontend/src/lib/: projections.ts
frontend/src/types/: mapbox-gl-draw-rectangle-mode.d.ts
scripts/: start-backend.sh  start-frontend.sh
systemd/: dtcc-backend.service  dtcc-frontend.service
