[project]
name = "dtcc-carto-api"
version = "0.1.0"
description = "FastAPI backend for the DTCC cartography MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.37,<0.38",
    "shapely>=2.1,<3.0",
    "httpx>=0.28,<0.29",
    "pydantic[email]>=2.12,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
